--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "start-dev": "nodemon server/server.js",
+    "dev": "nodemon server/server.js",
     "test": "export NODE_ENV=test || \"SET NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
@@ -15,7 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expect": "1.20.2",
     "express": "^4.14.0",
+    "mocha": "3.0.2",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "nodemon": "1.10.2"
   }
 }
